--- a/Bakalauras/Bakalauras/Bakalauras.csproj
+++ b/Bakalauras/Bakalauras/Bakalauras.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-Bakalauras-E3D870A3-EA0F-4481-98AF-F2D18C81CF33</UserSecretsId>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
